outputs/syntax_error_tree.txt
REJECTED
Error at line 6:
    vtype id assign literal semi literal
                                 ^^^^^^^
SyntaxError: invalid syntax
